--- a/src/pages/backoffice/Table.css
+++ b/src/pages/backoffice/Table.css
@@ -28,7 +28,9 @@
   border: 1px solid #ccc;
   padding: 10px;
   text-align: center;
-  vertical-align: middle;
+  display: flex;
+  justify-content: center; /* 수평 가운데 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */ 
 }
 .itemLabel {  
   background: #e1e5ecda;
@@ -36,9 +38,11 @@
   color: darkblue;
 } 
 .itemValue {
+
   width: 370px
 } 
 .table li input{
+  float: left;
   border: 1px solid #ccc;
   padding: 10px; 
   width: 100%;
@@ -77,4 +81,60 @@ button {
   padding:10px;
   min-height:40px; 
   min-width: 70px;
+}
+
+.modalButton {   
+  cursor: pointer;
+  top:0%;
+  float: right;
+  background-color:#70baff;
+  color: #fff;
+  border:none; 
+  border-radius:10px; 
+  padding:10px;
+  min-height:40px; 
+  min-width: 70px;
+
+}
+
+
+
+
+
+
+
+
+
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
