5/3 신용카드 승인 수기 결제: 전송안된 데이터 팝업 기능 추가

--- a/src/pages/backoffice/KeyinSmartroPaymentData.css
+++ b/src/pages/backoffice/KeyinSmartroPaymentData.css
@@ -37,9 +37,9 @@
   width: 130px;
   color: darkblue;
 } 
-.itemValue {
-
-  width: 370px
+.itemValue { 
+  textAlign: left;
+  width: 370px;
 } 
 .table li input{
   float: left;
@@ -67,9 +67,12 @@
   padding: 10px; 
   width: 100%
 }
-h1{
-  font-size : 40px;
-}
+h1{ font-size : 40px; }
+h2{ font-size : 35px; }
+h3{ font-size : 30px; }
+h4{ font-size : 25px; }
+h5{ font-size : 20px; }
+h6{ font-size : 15px; }
 
 button {   
   top:0%;
@@ -97,13 +100,33 @@ button {
 
 }
 
+  
+input:required {
+  border: 1px solid #ccc; /* 일반적인 테두리 스타일 */
+}
+input:required:invalid {
+  border: 2px solid rgb(159, 221, 195); /* 빨간색 테두리 */
+}
+
+select:required {
+  border: 1px solid #ccc; /* 일반적인 테두리 스타일 */
+}
+select:required:invalid {
+  border: 2px solid rgb(159, 221, 195); /* 빨간색 테두리 */
+}
+
+input[type="radio"]:required {
+  border: 5px solid #ccc; /* 일반적인 테두리 스타일 */
+}
+input[type="radio"]:required:invalid {
+  border: 2px solid rgb(159, 221, 195); /* 빨간색 테두리 */
+}
 
 
 
 
 
-
-
+/* modal style*/
 
 .modal {
   display: block;
@@ -119,10 +142,10 @@ button {
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
+  margin: 15% auto; 
+  padding: 20px 20px 100px 20px ;  /* top right botton left*/
   border: 1px solid #888;
-  width: 80%;
+  width: 80%; 
 }
 
 .close {
